--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(241,171,179);
+  background: linear-gradient(29deg, rgba(241,171,179,1) 0%, rgba(255,255,255,1) 100%);
 }
 
 code {
